--- a/gb/20/7/30/n12294343.md
+++ b/gb/20/7/30/n12294343.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oeojha307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oeojha307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oeojha307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oeojha307/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oeojha307/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>多项选择题考试学习策略</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/Fotolia_229334987_Subscription_L-600x400.jpg" />
 <h6>针对多项选择题的学习是一项可以通过学习，不断磨练并逐步完善的技能。（Fotolia）
@@ -8,9 +8,9 @@
 <hr>
 <p>【大纪元2020年07月30日讯】（大纪元记者李路明澳洲悉尼编译报导）针对多项选择题的学习是一项可以通过学习，不断磨练并逐步完善的技能。下面介绍的策略能帮助您在做多项选择题中获得理想成绩。</p>
 <h2>开学第一天就开始学习</h2>
-<p>从开学第一天就需要开始为<ahref="https://github.com/oeojha307/djy/blob/master/gb/tag/%E8%80%83%E8%AF%95.md#1">考试</a>做准备。谈到学习，一个是投入的时间，再一个是重复练习。最好的学习是上课认真听，做好课堂笔记，做试题测验等。在做多项选择题考试那天，你就是在回顾自己所学的知识，而不是从新开始学。</p>
+<p>从开学第一天就需要开始为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%80%83%E8%AF%95.md#1">考试</a>做准备。谈到学习，一个是投入的时间，再一个是重复练习。最好的学习是上课认真听，做好课堂笔记，做试题测验等。在做多项选择题考试那天，你就是在回顾自己所学的知识，而不是从新开始学。</p>
 <h2>询问多项选择题测试内容</h2>
-<p>在正式准备<ahref="https://github.com/oeojha307/djy/blob/master/gb/tag/%E8%80%83%E8%AF%95.md#1">考试</a>前，请向您的老师或教授询问有关测试的内容。您可以提出类似下面的问题：</p>
+<p>在正式准备<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%80%83%E8%AF%95.md#1">考试</a>前，请向您的老师或教授询问有关测试的内容。您可以提出类似下面的问题：</p>
 <ul>
 <li>您是否提供学习指南？这应该是您提出的第一个问题。如果老师或教授提供这些，那么您可以不需要看所有的书和做那些过时的练习题，从而节省出大量时间。</li>
 <li>是否会测试本章或本单元中的词汇？如果是这样，怎么测试？如果您记住了所有词汇及其定义，但却不能恰当地使用这些单词，那么您可能已经在浪费时间。有些老师可能会测试教科书中一个词汇的定义，但是有很多老师不在乎您是否知道每个词的定义，只要您可以使用或应用它即可。</li>
@@ -34,42 +34,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/16/5/7/n7825291.md#1">学习是超能力 美国老师课桌留言好有心</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/17/5/2/n9099647.md#1">郭睦怡博士谈青少年学习成功策略</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/18/9/10/n10703811.md#1">如何自学？</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/19/2/13/n11042135.md#1">高效学习策略</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/19/5/23/n11274794.md#1">学习努力成绩差 试试提取练习法</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/19/5/24/n11278333.md#1">英国小升初 家长怎样帮孩子准备11+考试</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/6/1/n12153108.md#1">作文选登：拯救课业大作战</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/15/n12257327.md#1">改善学习习惯 达到理想学习效果</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/30/n12294154.md#1">大学生如何保持对学习的热情和效率</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/23/n12277858.md#1">超级学习者的6个习惯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/7/n7825291.md#1">学习是超能力 美国老师课桌留言好有心</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/2/n9099647.md#1">郭睦怡博士谈青少年学习成功策略</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/9/10/n10703811.md#1">如何自学？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/13/n11042135.md#1">高效学习策略</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/23/n11274794.md#1">学习努力成绩差 试试提取练习法</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/24/n11278333.md#1">英国小升初 家长怎样帮孩子准备11+考试</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/1/n12153108.md#1">作文选登：拯救课业大作战</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/15/n12257327.md#1">改善学习习惯 达到理想学习效果</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10022923.md#1" target="_blank">宋永毅：江青和张玉凤的秘密战争</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916777.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12290545.md#1">美国从31日起恢复对55类中国商品征税</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/29/n12291106.md#1">【视频】黄历六月北京飞雪 网民：必有奇冤</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/24/n12280824.md#1">【内幕】习恭维之计失效 川普发反共檄文</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12289395.md#1">大陆知名财经博主：经济内循环？别乱做梦了</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12289743.md#1">习近平要保政权 北大教授：权贵阶层用脚投票</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12286850.md#1">潘玮柏惊喜宣布结婚 娶小13岁中国空姐</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12287645.md#1">自曝当年生子险送命 大S：靠女儿拉出鬼门关</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12289207.md#1">双方不约而同感激对方 艾成与王瞳登记结婚</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12287781.md#1">不敌疫情 赌王千金何超莲宣布关闭牛肉面店</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/9/12/8/n2747593.md#1">时穷节乃见  为张睢阳齿——张巡</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/15/12/5/n4589242.md#1">一碗清茶 解解解元之渴  下联怎生妙对？</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12288658.md#1">沉重的“7.20”——神韵艺术家回忆曾经的迫害</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oeojha307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oeojha307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/30/n12294343.htm">多项选择题考试学习策略</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/30/n12294343.htm">多项选择题考试学习策略</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oeojha307/djy/blob/master/gb/20/7/30/n12294343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oeojha307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oeojha307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oeojha307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/7/30/n12294343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
