--- a/gb/20/8/7/n12313719.md
+++ b/gb/20/8/7/n12313719.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxexow3039/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxexow3039/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pxexow3039/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pxexow3039/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pxexow3039/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>如何有效利用网络资源学习</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/Fotolia_192889757_Subscription_L-600x400.jpg" />
 <h6>要想有效利用网络资源进行学习，学生需要对网络资源提供的线索进行评估和整合。（Fotolia）
 </h6>
 <hr>
 <p>【大纪元2020年08月07日讯】（大纪元记者温婧澳洲悉尼编译报导）网络问世以来，我们越来越习惯于从网上获取信息。遇到问题时，我们也喜欢上网寻找答案。通常，网上可以获得非常详细的技术说明，但是我们对这些信息的理解到底有多好呢？</p>
-<p>芝加哥伊利诺伊大学（University of Illinois）的珍妮弗·威利（Jennifer Wiley）和她的同事对大<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>如何利<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E7%BD%91%E7%BB%9C%E8%B5%84%E6%BA%90.md#1">网络资源</a><ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>进行了研究。研究发表在《美国教育研究期刊》（American Education Research Journal）。</p>
-<p>威利要求<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>写一篇论文，解释圣海伦火山（Mt. St. Helen）为何会爆发。她要求学生从网上寻找资料。研究发现，最会利用<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E7%BD%91%E7%BB%9C%E8%B5%84%E6%BA%90.md#1">网络资源</a><ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的学生，具备可以区分好坏信息的能力。</p>
+<p>芝加哥伊利诺伊大学（University of Illinois）的珍妮弗·威利（Jennifer Wiley）和她的同事对大<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>如何利<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%91%E7%BB%9C%E8%B5%84%E6%BA%90.md#1">网络资源</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>进行了研究。研究发表在《美国教育研究期刊》（American Education Research Journal）。</p>
+<p>威利要求<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>写一篇论文，解释圣海伦火山（Mt. St. Helen）为何会爆发。她要求学生从网上寻找资料。研究发现，最会利用<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%91%E7%BB%9C%E8%B5%84%E6%BA%90.md#1">网络资源</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的学生，具备可以区分好坏信息的能力。</p>
 <p>学生在网上不仅能搜到可信度极高的信息，例如《科学美国人》（Scientific American），也能搜索到不怎么可靠的信息，例如有的网络文章认为其它行星和恒星的位置是圣海伦火山喷发的原因之一，或声称石油钻探应为火山喷发负责。能够很好地区分可靠与不可靠信息的学生都具有一个特质，就是日常的批判性思维能力。</p>
 <p>即便如此，这些学生在解释如何判断网络信息可信度时也感到困难。学生能毫不费力的对网站的可靠性进行排名，但无法明确解释为什么有的网站可靠性更高。他们似乎也没有对这些网站的信息进行整合，并以此作为判断好坏信息的基础。这表明，即使具备一定批判性思维能力的学生也还需要提高利用网络资源学习的策略。</p>
 <p>为了研究作业要求是否对学习有影响，学生获得的作业要求也有所不同。一半学生被要求描述火山爆发的成因，而另一半学生则被要求对火山爆发的成因进行论证。研究人员想要了解后者是否能让学生在写论文时包含更多因果关系的论述，以及能否让学生在查找网络资料时对这些资料进行更认真的的评估。</p>
@@ -22,42 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/19/2/1/n11017031.md#1">田纳西图书馆提供电子书借阅服务</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/19/2/13/n11042146.md#1">家长指南：如何实践在线教育</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/5/9/n12094617.md#1">ACT部分家长认为网络教学仍需更多支持</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/7/8/n12240210.md#1">柑县台美商会办线上讲座 鼓励善用学习资源</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/7/8/n12240908.md#1">高效率网络学习的8个方法</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/7/23/n12277858.md#1">超级学习者的6个习惯</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/7/26/n12285436.md#1">开学后继续在家学习？新泽西颁布远程教学指南</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/7/30/n12295780.md#1">家庭课堂Home school：新泽西父母有哪些资源和须知</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/7/n12313659.md#1">对于学业成功 情商和智商同等重要</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310890.md#1">大学在线监考平台泄密 44万用户信息被盗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/1/n11017031.md#1">田纳西图书馆提供电子书借阅服务</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/13/n11042146.md#1">家长指南：如何实践在线教育</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/9/n12094617.md#1">ACT部分家长认为网络教学仍需更多支持</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/8/n12240210.md#1">柑县台美商会办线上讲座 鼓励善用学习资源</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/8/n12240908.md#1">高效率网络学习的8个方法</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/23/n12277858.md#1">超级学习者的6个习惯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/26/n12285436.md#1">开学后继续在家学习？新泽西颁布远程教学指南</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/30/n12295780.md#1">家庭课堂Home school：新泽西父母有哪些资源和须知</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248062.md#1" target="_blank">共产暴政录：共产革命前后的古巴华人</a></li><li><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/22/n11814019.md#1" target="_blank">夏林：中共是国民党大选惨败的根本原因</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310914.md#1">去年刚断交 台援助防疫物资 竟遭索罗门政府扣留</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12309844.md#1">专访闫丽梦：爆料北京掩盖中共病毒</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310247.md#1">【拍案惊奇】黎巴嫩爆炸内幕深？共军缺钱4原因</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310980.md#1">黎巴嫩中国和朝鲜 24小时内三地大爆炸</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12305587.md#1">【内幕】中共秘而不宣的大连疫情分布图</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12306966.md#1">网爆“天王嫂训练营”潘玮柏郭富城被套路？</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12309278.md#1">宣布放弃华为代言 瑞典小天后拉尔森曝光原因</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12307256.md#1">探班只顾与高圆圆通话 赵又廷遭林更新戏说</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12312580.md#1">曾遭设局陷嫖娼丑闻 黄海波获高圆圆惊喜庆生</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12306613.md#1">女星跟风贴黑白照撑女权 何韵诗斥选择性发声</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/2/n12301623.md#1">一个奇梦揭示鸦片膏在另外空间的表现</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12308038.md#1">马斯克说金字塔是外星人建的 埃及如此回应</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/2/n12300632.md#1">春秋时代一场陨石雨  天人感应预兆证验不爽？</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/3/n12302128.md#1">【涛哥侃封神】第四回 恩州驿狐狸死妲己</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/11/1/4/n3132040.md#1">巴洛克艺术（二）卡拉瓦乔</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pxexow3039/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pxexow3039/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/7/n12313719.htm">如何有效利用网络资源学习</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/7/n12313719.htm">如何有效利用网络资源学习</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/pxexow3039/djy/blob/master/gb/20/8/7/n12313719.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pxexow3039/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pxexow3039/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pxexow3039/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/7/n12313719.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
